Cleaing code, adding comments and checkin document outline

--- a/app/views/partials/templates/header.ejs
+++ b/app/views/partials/templates/header.ejs
@@ -1,5 +1,6 @@
 <header class="header">
     <nav class="navbar navbar-fixed-top navigation" id="navigation">
+        <h3 class="visually-hidden">Navigation list</h3>
 			<div class="container header-container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
@@ -25,5 +26,6 @@
 			</div><!--container-->
 		</nav><!--nav-->
 
+        <h2 class="page-heading" aria-hidden="true">Ski Jumping 2017/18</h2>
 
 </header>
