--- a/resources/sass/_calendar.sass
+++ b/resources/sass/_calendar.sass
@@ -1,10 +1,10 @@
 .calendar-header
     @extend .skijumpers-header
+    margin-bottom: 25px
 
 .calendar-list
     list-style-type: none
     padding-left: 0
-
     +element('item')
         color: white
         background: url('/images/abstract.jpg') no-repeat, linear-gradient(to bottom, $theme-stormy, $theme-evening)
