--- a/resources/sass/_header.sass
+++ b/resources/sass/_header.sass
@@ -1,5 +1,4 @@
 //MAIN
-
 .header
     height: 400px
     background: url('../images/banner.jpg') no-repeat top center
@@ -7,6 +6,28 @@
     border-bottom: 2px solid $theme-stormy
     background-color: #494e6b
     background-blend-mode: overlay
+    position: relative
+
+.visually-hidden
+    display: none
+
+.page-heading
+    position: absolute
+    text-align: center
+    background-color: rgba(0,0,0,.75)
+    padding: 15px
+    border-top: 1px solid #fff
+    border-bottom: 1px solid #fff
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
+    color: $yellow
+    &::after
+        content: "Polish Team Fanpage"
+        display: block
+        font-size: 2rem
+        margin-top: 15px
+        color: white
 
 .navigation
     height: 52px
@@ -29,6 +50,7 @@
 
 .brand-image
     display: none
+
 //BOOTSTRAP OVERRIDES
 
 .navbar-toggle[aria-expanded="true"]
@@ -46,9 +68,14 @@
 
 .navbar-collapse
     border-top: none
+
 //MEDIA QUERIES
 
 @media screen and (max-width: 767px)
+    .page-heading
+        font-size: 2.4rem
+        &::after
+            display: none
     .header
         margin-top: 50px
 
