--- a/resources/sass/_hill.sass
+++ b/resources/sass/_hill.sass
@@ -19,7 +19,6 @@
     justify-content: space-between
     margin: 25px 0
 
-
 .table
     width: 49%
     margin: 0
@@ -32,7 +31,6 @@
     border: 3px solid $theme-sunset
     border-radius: 5px
     background-color: rgba(0,0,0,.3)
-
 
 .table > thead > tr > th
     border-bottom: none
@@ -77,7 +75,10 @@
         border-top: 1px solid #fff
         border-bottom: 1px solid #fff
 
+//MEDIA QUERIES
+
 @media screen and (max-width: 728px)
+
     .image-header
         height: 300px
     .row-flex
@@ -91,5 +92,6 @@
         height:  312px
 
 @media screen and (max-width: 540px)
+    
     .image-header
         height: 200px
