Corrected text in lead

--- a/app/views/view_index.ejs
+++ b/app/views/view_index.ejs
@@ -10,11 +10,11 @@
         <div class="container">
             <div class="lead__content">
                 <p>Welcome on the Polish Ski Jumpers Fan Page for winter season 2016/2017.
-                    This website was made as a web developement project, that main goal was to practice Express Js.
+                    This website was made as a web developement project, and it's main goal was to practice Express Js.
                     Please go to <a href="/about" title="Go to About page" class="content__link">'About'</a> section for more details.
                 </p>
                 <p>What will you find here? Information about 2016/2017 season such as: polish squad with jumpers details,
-                    calendar of all events and details of all ski jumping hill that will host competitions.
+                    calendar of all events and details of all ski jumping hills that will host competitions.
                 </p>
                 <p>Welcome in the world of this beautiful sport, where all it matters is pure competition and no negative
                     emotions! Enjoy this journey!</p>
