--- a/app/views/partials/templates/html_head.ejs
+++ b/app/views/partials/templates/html_head.ejs
@@ -1,8 +1,8 @@
 <head>
 	<meta charset="utf-8" />
 	<title><%=pageId%></title>
-	<meta name="description" content="Low cost 24 Hour Gym, located in North London - Holloway">
-	<meta name="keywords" content="london gym, cheap gym, 24 hours gym, north london, holloway, islington, archway">
+	<meta name="description" content="<%=description%>">
+	<meta name="keywords" content="<%=keywords%>">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <link rel="shortcut icon" href="css/favicon.ico">
