Elimianated HTML erros in index

--- a/app/views/view_index.ejs
+++ b/app/views/view_index.ejs
@@ -29,17 +29,17 @@
                 <div class="contests">
                     <div class="contests__item">
                         <h2>Last contest</h2>
-                        <span><%=prevEvent.date%>, <%=prevEvent.place%><img src="images/<%=prevEvent.country%>.png"></span>
+                        <span><%=prevEvent.date%>, <%=prevEvent.place%><img src="images/<%=prevEvent.country%>.png" alt=""></span>
                         <span>Type: <%=prevEvent.type%></span>
 
                     </div>
                     <div class="contests__item">
                         <h2>Next contest</h2>
-                        <span><%=nextEvent.date%>, <%=nextEvent.place%><img src="images/<%=nextEvent.country%>.png"></span>
+                        <span><%=nextEvent.date%>, <%=nextEvent.place%><img src="images/<%=nextEvent.country%>.png" alt=""></span>
                         <span>Type: <%=nextEvent.type%></span>
                     </div><!--contests__item-->
                 </div><!--contests-->
-                <iframe class="iframe" src="https://www.youtube.com/embed/vN9HLTqCUXk" frameborder="0" allowfullscreen></iframe>
+                <iframe class="iframe" src="https://www.youtube.com/embed/vN9HLTqCUXk" allowfullscreen></iframe>
             </div><!--row-flex-->
         </div><!--container-->
     </section><!--section details-->
