--- a/app/views/view_skijumpers.ejs
+++ b/app/views/view_skijumpers.ejs
@@ -18,7 +18,7 @@
 				<h2 class="card__header"><%=item.name%></h2><!--SKIJUMPER NAME-->
 				<div class="card-details">
 						<!--SKIJUMPER PHOTO-->
-						<img class="card-details__image" src="/images/ski jumpers/<%=item.image%>" alt="<%=item.image%>">
+						<img class="card-details__image" src="/images/ski_jumpers/<%=item.image%>" alt="<%=item.image%>">
 
 						<!--SKIJUMPER DETAILS-->
 					<div class="card-details__jumper-details">
