Fixing html erros on about page

--- a/app/views/view_about.ejs
+++ b/app/views/view_about.ejs
@@ -8,7 +8,7 @@
     <article>
         <h1 class="text-center hill-header">About the project</h1>
         <div class="about">
-            <p class="about__lead">
+            <div class="about__lead">
                 <span class="about__lead--bold">This website is my web developement project with using Express JS for the first time.
                 Following technologies were used:</span>
                 <ul class="list">
@@ -28,7 +28,7 @@
                         </ul>
                     </li>
                 </ul>
-            </p>
+            </div>
             <p>
                 <a class="about__link" href="https://github.com/wafel34/skijumping" title="Auhor's Github Account">See Github Repository</a>
             </p>
