Changing table cells

--- a/app/views/view_hill.ejs
+++ b/app/views/view_hill.ejs
@@ -16,6 +16,7 @@
                     <thead>
                         <tr>
                             <th class="table-item--bold">Details:</th>
+                            <th class="table-item--bold"></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -55,7 +56,7 @@
                         </tr>
                     </tbody>
             </table>
-            <iframe class="iframe" src="<%=data.yt%>" frameborder="0" allowfullscreen></iframe><!--YT video-->
+            <iframe class="iframe" src="<%=data.yt%>" allowfullscreen></iframe><!--YT video-->
     </div><!--row-flex-->
     <div class="hill-description">
         <p class="hill-description__content"><%=data.description%></p>
