--- a/app/views/partials/templates/html_head.ejs
+++ b/app/views/partials/templates/html_head.ejs
@@ -6,5 +6,6 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <link rel="shortcut icon" href="css/favicon.ico">
-	<link rel="stylesheet" href="/css/style.css" media="bogus">
+	<link rel="stylesheet" href="/css/style.css" media="none" onload="if(media!='all')media='all'">
+	<noscript><link rel="stylesheet" href="/css/style.css"></noscript>
 </head>
