Changed movie and pushing to other hosting

--- a/app/views/view_index.ejs
+++ b/app/views/view_index.ejs
@@ -39,7 +39,7 @@
                         <span>Type: <%=nextEvent.type%></span>
                     </div><!--contests__item-->
                 </div><!--contests-->
-                <iframe class="iframe" src="https://www.youtube.com/embed/vN9HLTqCUXk" allowfullscreen></iframe>
+                <iframe class="iframe" src="https://www.youtube.com/embed/J3JXViDCDiQ" allowfullscreen></iframe>
             </div><!--row-flex-->
         </div><!--container-->
     </section><!--section details-->
